Added tests for workflow client